Remove couple of IR testcases + add --enable-preview flag to tests